[gd_scene load_steps=93 format=3 uid="uid://blyhpi7sw2a1o"]

[ext_resource type="Script" path="res://characters/player/player.gd" id="1_t1hgf"]
[ext_resource type="Texture2D" uid="uid://c3rovrkjotkcs" path="res://assets/geto/geto attack arka-Sheet.png" id="2_lyadc"]
[ext_resource type="Script" path="res://characters/fsm/state_mac.gd" id="3_opg3d"]
[ext_resource type="Texture2D" uid="uid://dsljkg3cosem5" path="res://assets/geto/ATTACKONGETO-Sheet.png" id="3_wfq8n"]
[ext_resource type="Texture2D" uid="uid://bigk3vv7ncm8y" path="res://assets/geto/geto yan atak-Sheet.png" id="4_b6oey"]
[ext_resource type="Script" path="res://characters/player/Idle.gd" id="4_ny8u3"]
[ext_resource type="Script" path="res://characters/player/Run.gd" id="5_fpkvq"]
[ext_resource type="Texture2D" uid="uid://bwdh2pisvrmg6" path="res://assets/geto/geto arka idle-Sheet.png" id="5_jxpgh"]
[ext_resource type="Texture2D" uid="uid://mg8ybpsu0x1c" path="res://assets/geto/geto on idle-Sheet.png" id="6_ka6hi"]
[ext_resource type="Shader" uid="uid://3o65bl7hu7nl" path="res://characters/player/player.tres" id="7_06x6v"]
[ext_resource type="PackedScene" uid="uid://b47kyc7wyf40e" path="res://components/Hitbox.tscn" id="7_m17w6"]
[ext_resource type="Texture2D" uid="uid://b2aeorb0j7quj" path="res://assets/geto/geto yan idle-Sheet.png" id="7_uur8g"]
[ext_resource type="Texture2D" uid="uid://bi6wylt5kfyqi" path="res://assets/geto/geto arka yurume-Sheet.png" id="8_tspte"]
[ext_resource type="Texture2D" uid="uid://dwiqpenr3omu2" path="res://assets/geto/geto yurume on-Sheet.png" id="9_5u56w"]
[ext_resource type="Texture2D" uid="uid://b31ytjgyp5ixp" path="res://assets/geto/geto yan yurume.png" id="10_qlgs0"]
[ext_resource type="Texture2D" uid="uid://d3optuh2qoqyk" path="res://assets/rika/kiz arka atakan-Recovered-Sheet.png" id="11_527fh"]
[ext_resource type="Texture2D" uid="uid://bdis7epg8wgrc" path="res://assets/rika/kiz arka idle-Sheet.png" id="12_5wcfo"]
[ext_resource type="Texture2D" uid="uid://csqc4yhd3f77w" path="res://assets/rika/kiz one atakan-Sheet.png" id="12_b8u2l"]
[ext_resource type="Texture2D" uid="uid://be6vv0ei8hr20" path="res://assets/rika/kiz on idle-Sheet.png" id="13_wslox"]
[ext_resource type="Texture2D" uid="uid://btmchejblcjur" path="res://assets/rika/kiz arka yurume-Sheet.png" id="14_q75h6"]
[ext_resource type="Texture2D" uid="uid://60d368l0nj2c" path="res://assets/rika/kiz on yurume-Sheet.png" id="15_wqckj"]
[ext_resource type="Texture2D" uid="uid://dypqi0xgdrq4b" path="res://assets/rika/kiz yan idle-Sheet.png" id="16_udobp"]
[ext_resource type="Texture2D" uid="uid://bquwsu300j08o" path="res://assets/rika/kiz yan yurume-Sheet.png" id="18_yocrb"]
[ext_resource type="Texture2D" uid="uid://dieii2ttgby1x" path="res://assets/rika/kiz yana atakan-Sheet.png" id="19_w5ec4"]
[ext_resource type="PackedScene" uid="uid://cfpcqylll8gsj" path="res://components/HealthComponent.tscn" id="24_ehnu8"]
[ext_resource type="PackedScene" uid="uid://dp8ufi8djdmcw" path="res://components/DeathEffect.tscn" id="26_baqmt"]
[ext_resource type="AudioStream" uid="uid://jxs06n7kbkmn" path="res://assets/audio/sfx/sword-slash.mp3" id="27_6e74i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7fqe8"]
size = Vector2(9, 15)

[sub_resource type="Animation" id="Animation_nk2s1"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/BooleanParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, false]
}

[sub_resource type="Animation" id="Animation_7slww"]
resource_name = "hit_flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/BooleanParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d4ejh"]
_data = {
"RESET": SubResource("Animation_nk2s1"),
"hit_flash": SubResource("Animation_7slww")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_53fnh"]
resource_local_to_scene = true
shader = ExtResource("7_06x6v")
shader_parameter/BooleanParameter = true
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gxag"]
atlas = ExtResource("2_lyadc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t54uc"]
atlas = ExtResource("2_lyadc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xefy1"]
atlas = ExtResource("2_lyadc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbuxv"]
atlas = ExtResource("2_lyadc")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmd56"]
atlas = ExtResource("2_lyadc")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q6b3"]
atlas = ExtResource("11_527fh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i14w"]
atlas = ExtResource("11_527fh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mml56"]
atlas = ExtResource("11_527fh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ytva"]
atlas = ExtResource("11_527fh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxld0"]
atlas = ExtResource("11_527fh")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4rvx"]
atlas = ExtResource("3_wfq8n")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr1uq"]
atlas = ExtResource("3_wfq8n")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gesse"]
atlas = ExtResource("3_wfq8n")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pipj1"]
atlas = ExtResource("3_wfq8n")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8t5p"]
atlas = ExtResource("3_wfq8n")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofaft"]
atlas = ExtResource("12_b8u2l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg4b6"]
atlas = ExtResource("12_b8u2l")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lomqn"]
atlas = ExtResource("12_b8u2l")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8blh2"]
atlas = ExtResource("12_b8u2l")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vos7o"]
atlas = ExtResource("4_b6oey")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpc1q"]
atlas = ExtResource("4_b6oey")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq77n"]
atlas = ExtResource("4_b6oey")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iorxb"]
atlas = ExtResource("4_b6oey")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uci2h"]
atlas = ExtResource("4_b6oey")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kdga"]
atlas = ExtResource("19_w5ec4")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5or43"]
atlas = ExtResource("19_w5ec4")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d2e2"]
atlas = ExtResource("19_w5ec4")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d32o8"]
atlas = ExtResource("19_w5ec4")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr1mf"]
atlas = ExtResource("19_w5ec4")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_75et4"]
atlas = ExtResource("5_jxpgh")
region = Rect2(0, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdatj"]
atlas = ExtResource("5_jxpgh")
region = Rect2(34, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i03sp"]
atlas = ExtResource("12_5wcfo")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7kj0"]
atlas = ExtResource("12_5wcfo")
region = Rect2(36, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_okisa"]
atlas = ExtResource("6_ka6hi")
region = Rect2(0, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x03sg"]
atlas = ExtResource("6_ka6hi")
region = Rect2(36, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r50fr"]
atlas = ExtResource("13_wslox")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_orhb6"]
atlas = ExtResource("15_wqckj")
region = Rect2(36, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bexap"]
atlas = ExtResource("7_uur8g")
region = Rect2(0, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r46v3"]
atlas = ExtResource("7_uur8g")
region = Rect2(34, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wcs3"]
atlas = ExtResource("16_udobp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_va3rr"]
atlas = ExtResource("16_udobp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t5s5"]
atlas = ExtResource("8_tspte")
region = Rect2(0, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nvjk"]
atlas = ExtResource("8_tspte")
region = Rect2(34, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_we0j5"]
atlas = ExtResource("8_tspte")
region = Rect2(68, 0, 34, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqm1c"]
atlas = ExtResource("14_q75h6")
region = Rect2(0, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n55la"]
atlas = ExtResource("14_q75h6")
region = Rect2(36, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n4i3"]
atlas = ExtResource("14_q75h6")
region = Rect2(72, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ypvf"]
atlas = ExtResource("9_5u56w")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8b4cf"]
atlas = ExtResource("9_5u56w")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xljxl"]
atlas = ExtResource("9_5u56w")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqlgx"]
atlas = ExtResource("15_wqckj")
region = Rect2(0, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr4tc"]
atlas = ExtResource("15_wqckj")
region = Rect2(36, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn5sn"]
atlas = ExtResource("15_wqckj")
region = Rect2(72, 0, 36, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17a1p"]
atlas = ExtResource("10_qlgs0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1bdj"]
atlas = ExtResource("10_qlgs0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_syff0"]
atlas = ExtResource("10_qlgs0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lae6v"]
atlas = ExtResource("18_yocrb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywsbm"]
atlas = ExtResource("18_yocrb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5rsi"]
atlas = ExtResource("18_yocrb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s8h5j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gxag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t54uc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xefy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbuxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmd56")
}],
"loop": true,
"name": &"attack-back-geto",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q6b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i14w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mml56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ytva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxld0")
}],
"loop": true,
"name": &"attack-back-rika",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4rvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr1uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gesse")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pipj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8t5p")
}],
"loop": true,
"name": &"attack-front-geto",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofaft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg4b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lomqn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8blh2")
}],
"loop": true,
"name": &"attack-front-rika",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vos7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpc1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq77n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iorxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uci2h")
}],
"loop": true,
"name": &"attack-sideview-geto",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kdga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5or43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d2e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d32o8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr1mf")
}],
"loop": true,
"name": &"attack-sideview-rika",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75et4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdatj")
}],
"loop": true,
"name": &"idle-back-geto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i03sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7kj0")
}],
"loop": true,
"name": &"idle-back-rika",
"speed": 4.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okisa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x03sg")
}],
"loop": true,
"name": &"idle-front-geto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r50fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orhb6")
}],
"loop": true,
"name": &"idle-front-rika",
"speed": 4.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bexap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r46v3")
}],
"loop": true,
"name": &"idle-sideview-geto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wcs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va3rr")
}],
"loop": true,
"name": &"idle-sideview-rika",
"speed": 4.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t5s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nvjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we0j5")
}],
"loop": true,
"name": &"move-back-geto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqm1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n55la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n4i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n55la")
}],
"loop": true,
"name": &"move-back-rika",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ypvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b4cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xljxl")
}],
"loop": true,
"name": &"move-front-geto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqlgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr4tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn5sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr4tc")
}],
"loop": true,
"name": &"move-front-rika",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17a1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1bdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syff0")
}],
"loop": true,
"name": &"move-sideview-geto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lae6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywsbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5rsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywsbm")
}],
"loop": true,
"name": &"move-sideview-rika",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("state_machine", "health_component") groups=["Persist", "player"]]
z_index = 3
motion_mode = 1
script = ExtResource("1_t1hgf")
MAX_SPEED = 200.0
state_machine = NodePath("StateMachine")
health_component = NodePath("HealthComponent")
mood = "rika"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.49, 2.1)
shape = SubResource("RectangleShape2D_7fqe8")

[node name="Hitbox" parent="." groups=["hitbox"] instance=ExtResource("7_m17w6")]
position = Vector2(0, 2.98023e-08)
scale = Vector2(5.01903, 11.2914)
collision_layer = 0
collision_mask = 14
damage_rate = 1.0
opponent = "enemy"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state", "current_state")]
script = ExtResource("3_opg3d")
starting_state = NodePath("Idle")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("run_state", "actor")]
script = ExtResource("4_ny8u3")
run_state = NodePath("../Run")
actor = NodePath("../..")

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_state", "actor")]
script = ExtResource("5_fpkvq")
idle_state = NodePath("../Idle")
actor = NodePath("../..")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="HealthComponent" parent="." node_paths=PackedStringArray("death_effect", "animator", "actor", "hitflash_animator") instance=ExtResource("24_ehnu8")]
death_effect = NodePath("../DeathEffect")
animator = NodePath("../AnimatedSprite2D")
actor = NodePath("..")
hitflash_animator = NodePath("../HitFlash")
max_health = 30

[node name="HitFlash" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_d4ejh")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_53fnh")
sprite_frames = SubResource("SpriteFrames_s8h5j")
animation = &"attack-front-rika"
frame_progress = 0.181004

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)
limit_left = 0
limit_top = 0
limit_right = 960
limit_bottom = 640

[node name="DeathEffect" parent="." node_paths=PackedStringArray("actor") instance=ExtResource("26_baqmt")]
animation = "death"
actor = NodePath("..")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27_6e74i")

[connection signal="body_exited" from="Hitbox" to="Hitbox" method="_on_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="HitFlash" to="." method="_on_hit_flash_animation_finished"]
